--- a/banco-integrado-api/gateway/package.json
+++ b/banco-integrado-api/gateway/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.11.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "soap": "^1.2.1",
     "swagger-jsdoc": "^6.2.8",
