:sparkles: feat: integração assíncrona com MOM e RabbitMQ

--- a/banco-integrado-api/servico-relatorios-consumer/package.json
+++ b/banco-integrado-api/servico-relatorios-consumer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gateway",
+  "name": "servico-relatorios-consumer",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,12 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.10.8",
-    "axios": "^1.11.0",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "soap": "^1.2.1",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "amqplib": "^0.10.8"
   }
 }
